# macroni

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: MACRONIConfig.cmake.in  ccache.cmake  compiler_warnings.cmake  count_commits_since_last_version_change.cmake  get_git_hash.cmake  options.cmake  prevent_in_source_builds.cmake  project_settings.cmake  project_utils.cmake  project_version_details.cmake
cmake/macroni/: compiler_warnings.cmake  count_commits_since_last_version_change.cmake  get_git_hash.cmake  project_settings.cmake  project_utils.cmake  static_analyzers.cmake
examples/: 1.c  1.mlir  2.c  2.mlir  3.c  3.mlir  4.c  4.mlir  5.c  5.mlir  6.c  6.mlir  container_of.c  container_of.mlir  get_user.c  get_user.mlir  list_for_each.c  list_for_each.mlir  offsetof.c  offsetof.mlir  rcu_critical_section.c  rcu_critical_section.mlir
include/macroni/: CMakeLists.txt  Version.h  Version.hpp.in  Version.inc.in
include/macroni/ASTConsumers/: CMakeLists.txt
include/macroni/ASTConsumers/Kernel/: KernelASTConsumer.hpp
include/macroni/ASTConsumers/Safety/: SafetyASTConsumer.hpp
include/macroni/ASTMatchers/Kernel/: RCUMatchers.hpp
include/macroni/ASTMatchers/Safety/: SafetyMatchers.hpp
include/macroni/Analysis/Kernel/: KernelAnalysisPass.hpp  RCUAnalysis.hpp  RCUAnalyzer.hpp
include/macroni/Common/: CodeGenDriverSetup.hpp  Common.hpp  EmptyVisitor.hpp  ExpansionTable.hpp  GenerateMacroniDriver.hpp  GenerateMacroniModule.hpp  GenerateModule.hpp  MLIRUtils.hpp  MacroSpelling.hpp  MacroniMetaGenerator.hpp  ParseAST.hpp
include/macroni/Config/: Config.h  config.h.cmake
include/macroni/Conversion/: CMakeLists.txt  MacroniRewriters.hpp
include/macroni/Conversion/Kernel/: KernelRewriters.hpp
include/macroni/Conversion/Safety/: SafetyRewriters.hpp
include/macroni/Dialect/: CMakeLists.txt  Dialects.hpp
include/macroni/Dialect/Kernel/: CMakeLists.txt  Kernel.td  KernelAttributes.hpp  KernelAttributes.td  KernelDialect.hpp  KernelInterfaces.hpp  KernelInterfaces.td  KernelOps.hpp  KernelOps.td  KernelTypes.hpp  KernelTypes.td
include/macroni/Dialect/Macroni/: CMakeLists.txt  Macroni.td  MacroniAttributes.hpp  MacroniAttributes.td  MacroniDialect.hpp  MacroniOps.hpp  MacroniOps.td  MacroniTypes.hpp  MacroniTypes.td
include/macroni/Dialect/Safety/: CMakeLists.txt  Safety.td  SafetyDialect.hpp  SafetyOps.hpp  SafetyOps.td
include/macroni/Translation/: CMakeLists.txt  MacroniCodeGenContext.hpp  MacroniCodeGenVisitorMixin.hpp  MacroniMetaGenerator.hpp
include/macroni/Translation/Kernel/: CMakeLists.txt  KernelVisitor.hpp
include/macroni/Translation/Macroni/: MacroniVisitor.hpp  PastaMetaGenerator.hpp
include/macroni/Translation/Safety/: SafetyVisitor.hpp
lib/: CMakeLists.txt  Version.cpp.in
lib/macroni/: CMakeLists.txt
lib/macroni/ASTConsumers/: CMakeLists.txt
lib/macroni/ASTConsumers/Kernel/: CMakeLists.txt  KernelASTConsumer.cpp
lib/macroni/ASTConsumers/Safety/: CMakeLists.txt  SafetyASTConsumer.cpp
lib/macroni/ASTMatchers/Kernel/: CMakeLists.txt  RCUMatchers.cpp
lib/macroni/ASTMatchers/Safety/: CMakeLists.txt  SafetyMatchers.cpp
lib/macroni/Analysis/: CMakeLists.txt
lib/macroni/Analysis/Kernel/: CMakeLists.txt  KernelAnalysisPass.cpp  RCUAnalysis.cpp  RCUAnalyzer.cpp
lib/macroni/Common/: CMakeLists.txt  EmptyVisitor.cpp  GenerateMacroniDriver.cpp  MLIRUtils.cpp  MacroniMetaGenerator.cpp  ParseAST.cpp
lib/macroni/Config/: CMakeLists.txt  Config.cpp.in
lib/macroni/Conversion/: CMakeLists.txt  MacroniRewriters.cpp
lib/macroni/Conversion/Kernel/: CMakeLists.txt  KernelRewriters.cpp
lib/macroni/Conversion/Safety/: CMakeLists.txt  SafetyRewriters.cpp
lib/macroni/Dialect/: CMakeLists.txt
lib/macroni/Dialect/Kernel/: CMakeLists.txt  KernelAttributes.cpp  KernelDialect.cpp  KernelInterfaces.cpp  KernelOps.cpp  KernelTypes.cpp
lib/macroni/Dialect/Macroni/: CMakeLists.txt  MacroniAttributes.cpp  MacroniDialect.cpp  MacroniOps.cpp  MacroniTypes.cpp
lib/macroni/Dialect/Safety/: CMakeLists.txt  SafetyDialect.cpp  SafetyOps.cpp
lib/macroni/Translation/: CMakeLists.txt  MacroniCodeGenVisitorMixin.cpp  MacroniMetaGenerator.cpp  MacroniVisitor.cpp
lib/macroni/Translation/Kernel/: CMakeLists.txt  KernelVisitor.cpp
lib/macroni/Translation/Macroni/: CMakeLists.txt  MacroniMetaGenerator.cpp  MacroniVisitor.cpp  PastaMetaGenerator.cpp
lib/macroni/Translation/Safety/: CMakeLists.txt  SafetyVisitor.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/KernelTests/: address_space_attr.c  container_of.c  get_user.c  kernel_like_rcu_dereference.c  list_for_each.c  offsetof.c  rcu.h  rcu_access_pointer.c  rcu_assign_pointer.c  rcu_dereference.c  rcu_dereference_bh.c  rcu_dereference_sched.c  rcu_dereference_warnings.c  rcu_read_lock_unlock.c  rcu_replace_pointer.c  rcu_warnings.c  smp_mb.c  test_structs.h
test/MacroniTests/: container_of.c  function_like.c  get_user.c  list_for_each.c  offsetof.c  unsafe.c
test/SafetyTests/: unsafe.c
